
	* Fix bug where FAST pieces were cancelled on choke
	* Fixed problems with restoring piece states when hash failed.
	* Minimum peer reconnect time fix. Peers with no failures would
	  reconnect immediately.
	* Improved web seed error handling
	* DHT announce fixes and off-by-one loop fix
	* UPnP fixes
	* Fixed bug in torrent writer where the private flag was added
	  outside of the info dictionary
	* Made the torrent file parser less strict of what goes in the
	  announce-list entry
	* Fixed type overflow bug where some statistics was incorrectly
	  reported for file larger than 2 GB
	* boost-1.35 support
	* Fixed bug in statistics from web server peers where it sometimes
	  could report too many bytes downloaded.
	* Fixed bug where statistics from the last second was lost when
	  disconnecting a peer.
	* receive buffer optimizations (memcpy savings and memory savings)
	* Support for specifying the TOS byte for peer traffic.
	* Basic support for queueing of torrents.
	* Better bias to give connections to downloading torrents
	  with fewer peers.
	* Optimized resource usage (removed the checking thread)
	* Support to bind outgoing connections to specific ports
	* Disk cache support.
	* New, more memory efficient, piece picker with sequential download
	  support (instead of the more complicated sequential download threshold).
	* Auto Upload slots. Automtically opens up more slots if
	  upload limit is not met.
	* Improved NAT-PMP support by querying the default gateway (no
	  linux support yet)
	* Improved UPnP support by ignoring routers not on the clients subnet.

release 0.13
	
	* Added scrape support
	* Added add_extension() to torrent_handle. Can instantiate
	  extensions for torrents while downloading
	* Added support for remove_torrent to delete the files as well
	* Fixed issue with failing async_accept on windows
	* DHT improvements, proper error messages are now returned when
	  nodes sends bad packets