@@ -2241,7 +2241,6 @@ It contains the following fields::
 		{
 			queued_for_checking,
 			checking_files,
-			connecting_to_tracker,
 			downloading_metadata,
 			downloading,
 			finished,
@@ -2330,9 +2329,6 @@ current task is in the ``state`` member, it will be one of the following:
 +--------------------------+----------------------------------------------------------+
 |``checking_files``        |The torrent has not started its download yet, and is      |
 |                          |currently checking existing files.                        |
-+--------------------------+----------------------------------------------------------+
-|``connecting_to_tracker`` |The torrent has sent a request to the tracker and is      |
-|                          |currently waiting for a response                          |
 +--------------------------+----------------------------------------------------------+
 |``downloading_metadata``  |The torrent is trying to download metadata from peers.    |
 |                          |This assumes the metadata_transfer extension is in use.   |
